# pic-fluids

./: Cargo.toml  README.md  compile_runtime.sh  index.html  old_Cargo.toml  pic-fluids-54bfcf6c3aadaab6.js  pic-fluids-7512013f8ffee14d680ff8cfefdf65a70df4ae13fadcb5502d350038684f006d279c3aa173f852d11e28e894d0de1510.js  pic-fluids-7512013f8ffee14d680ff8cfefdf65a70df4ae13fadcb5502d350038684f006d279c3aa173f852d11e28e894d0de1510_bg.wasm  sw.js
.github/workflows/: pages.yml  rust.yml
src/: app.rs  array2d.rs  lib.rs  main.rs  old_lib.rs  query_accel.rs  sim.rs  wasm_embed.rs  wasm_runtime.rs
src/builtin_configs/: attract.json  central-force.json  earth-ring.json  particle-life-only.json  ring-potential.json
wasm-runtime/: Cargo.toml
wasm-runtime/.cargo/: config.toml
wasm-runtime/src/: builtins.rs  lib.rs  query_accel.rs
