[package]
name = "pic-fluids"
version = "0.1.0"
authors = ["Duncan Freeman <duncan.freeman1@gmail.com>"]
edition = "2021"
#rust-version = "1.65"


[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "puffin",
] }
log = "0.4"
glam = "0.24.1"
vorpal-widgets = { path = "../vorpal/vorpal-widgets" }

rand = { version = "0.8" }
getrandom = { version = "*", features = ["js"] }
rand_distr = { version = "0.4", default-features = false }
puffin = "0.18.1"
puffin_http = "0.15.0"
serde_json = "1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

wasm-bridge = "0.3.0"
wasm-runtime = { path = "./wasm-runtime" }
bytemuck = "1.13.1"

wat = "1.201.0"
vorpal-wasm = { path = "../vorpal/vorpal-wasm" }
wasmprinter = "0.201.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 3 # fast and small wasm

[profile.dev]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
